@@ -9,6 +9,7 @@
 - Fix style for checkbox list in subform
 - Fix constraints (broken on 4.2.2 on some cases)
 - Add clear_form_column_if, works like hide_form_column_if but sends the column empty, to clear it
+- Add checkboxes form UI, like select form UI in collection associations but supporting DB columns (e.g. serialized)
 
 = 4.2.2
 - Support setting form_ui_options with nil, for subforms
